works clear. input from string added. readme about AST-tree added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,9 +4,16 @@ include_directories(include)
 find_package(BISON)
 find_package(FLEX)
 
-BISON_TARGET(create_ast_parc create_ast.y src/create_ast.tab.cpp
-             DEFINES_FILE include/create_ast.tab.h)
-add_executable(Comp ../src/ast_str.cpp ../src/create_ast.tab.cpp)
-FLEX_TARGET(create_ast_lex lexer_ast.l src/lex.yy.cpp)
-add_executable(Comp ../src/lex.yy.cpp)
 
+
+BISON_TARGET(MyParser create_ast.y ${CMAKE_CURRENT_BINARY_DIR}/create_ast.tab.cpp
+			DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/create_ast.tab.h)
+FLEX_TARGET(MyScanner lexer_ast.l  ${CMAKE_CURRENT_BINARY_DIR}/lex.yy.cpp)
+ADD_FLEX_BISON_DEPENDENCY(MyScanner MyParser)
+include_directories(${CMAKE_CURRENT_BINARY_DIR})
+ add_executable(Foo
+    ./src/ast_str.cpp
+    ${BISON_MyParser_OUTPUTS}
+    ${FLEX_MyScanner_OUTPUTS}
+ )
+ target_link_libraries(Foo ${FLEX_LIBRARIES})
